--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 }
 input{
   border: 2px darkgoldenrod solid;
-  margin-left: 20px;
+  margin-left: 8%;
   height: 30px;
   border-radius: 20px;
   color: goldenrod;
