--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 input{
   border: 2px darkgoldenrod solid;
   margin-left: 8%;
+  margin-right: 9%;
   height: 30px;
   border-radius: 20px;
   color: goldenrod;
