--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@ header{
     <input type="text" name="name" id="name" placeholder="اكتب اسمك">
     <br>
     <button type="submit" id="submit" onclick="submit ()">!اضغط هنا</button>
-    
     <br>
     <h5 id="answer"></h5>
   </div>
@@ -112,7 +111,9 @@ let p = document.getElementById("answer")
   <br>
   <br>
     <div class="footer">
-      <h4 style="color: white; margin-left: 120px;">©Copyright by Mohamed Waleed.</h4>
+     <center>
+      <h4 style="color: white;">©Copyright by Mohamed Waleed.</h4>
+     </center>
     </div>
 </body>
 </html>
