--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   color: saddlebrown;
 }
 input{
-  align: right;
+  text-align: right;
   border: 2px darkgoldenrod solid;
   margin-left: 8%;
   margin-right: 9%;
